docs(gtnh-daily): expand administration guide